chore: criado i18n. realizadas melhorias nas mensagens  de erros