@@ -1,7 +1,11 @@
 package io.github.edsongustavotofolo.microservicetemplate.interfaceadapters.controllers.http.handlers;
 
-import io.github.edsongustavotofolo.microservicetemplate.domain.exceptions.BusinessRuleException;
+import io.github.edsongustavotofolo.microservicetemplate.interfaceadapters.controllers.http.handlers.models.ErrorApiResponse;
+import io.github.edsongustavotofolo.microservicetemplate.interfaceadapters.controllers.http.handlers.models.ErrorType;
+import io.github.edsongustavotofolo.microservicetemplate.interfaceadapters.controllers.http.handlers.models.StandardErrorApi;
+import io.github.edsongustavotofolo.microservicetemplate.usecases.exceptions.BusinessRuleException;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -10,48 +14,59 @@ import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
-import org.springframework.web.context.request.WebRequest;
 
+import javax.servlet.http.HttpServletRequest;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @ControllerAdvice
 @Slf4j
 public class ExceptionControllerHandler {
 
     @ExceptionHandler(value = BusinessRuleException.class)
-    public ResponseEntity<ErrorApi> businessRuleExceptionHander(BusinessRuleException ex, WebRequest request) {
+    public ResponseEntity<StandardErrorApi> businessRuleExceptionHander(final BusinessRuleException ex,
+                                                                        final HttpServletRequest request) {
         log.error("Falha de regra de negocio");
-        var errorApi = ErrorApi.builder()
-                .mensagens(List.of(ex.getMessage()))
-                .dataHora(LocalDateTime.now())
-                .status(HttpStatus.BAD_REQUEST.value())
-                .build();
-        return ResponseEntity.badRequest().body(errorApi);
+        return ResponseEntity
+                .status(ex.getStatus())
+                .body(ex.getStandardErrorApi(request.getRequestURI(), request.getLocale()));
     }
 
     @ExceptionHandler(value = MethodArgumentNotValidException.class)
-    public ResponseEntity<ErrorApi> methodArgumentNotValidExceptionHandler(MethodArgumentNotValidException ex, WebRequest request) {
+    public ResponseEntity<StandardErrorApi> methodArgumentNotValidExceptionHandler(final MethodArgumentNotValidException ex,
+                                                                                   final HttpServletRequest request) {
         log.warn("Falha na validacao dos dados de requisicao");
         BindingResult bindingResult = ex.getBindingResult();
         List<FieldError> fieldErrors = bindingResult.getFieldErrors();
-        List<String> errorMessages = fieldErrors.stream()
-                .map(fieldError -> fieldError.getDefaultMessage()).toList();
-        var errorApi = ErrorApi.builder()
-                .mensagens(errorMessages)
-                .dataHora(LocalDateTime.now())
+        var fields = fieldErrors.stream().collect(
+                Collectors.groupingBy(
+                        FieldError::getField,
+                        Collectors.mapping(DefaultMessageSourceResolvable::getDefaultMessage, Collectors.toList())
+                ));
+        var errorApi = StandardErrorApi.builder()
+                .timestamp(LocalDateTime.now())
                 .status(HttpStatus.BAD_REQUEST.value())
+                .error(ErrorApiResponse.builder()
+                        .code(ErrorType.EXPT001.name())
+                        .message(ErrorType.EXPT001.getMessage(request.getLocale()))
+                        .fields(fields)
+                        .build())
                 .build();
         return ResponseEntity.badRequest().body(errorApi);
     }
 
     @ExceptionHandler(value = DataIntegrityViolationException.class)
-    public ResponseEntity<ErrorApi> dataIntegrityViolationExceptionHandler(DataIntegrityViolationException ex, WebRequest request) {
-        log.error("Violacao de integridade no banco de dados");
-        var errorApi = ErrorApi.builder()
-                .mensagens(List.of(ex.getRootCause().getMessage()))
-                .dataHora(LocalDateTime.now())
+    public ResponseEntity<StandardErrorApi> dataIntegrityViolationExceptionHandler(final DataIntegrityViolationException ex,
+                                                                                   final HttpServletRequest request) {
+        log.error("Violacao de integridade no banco de dados", ex);
+        var errorApi = StandardErrorApi.builder()
+                .timestamp(LocalDateTime.now())
                 .status(HttpStatus.INTERNAL_SERVER_ERROR.value())
+                .error(ErrorApiResponse.builder()
+                        .code(ErrorType.EXPT002.name())
+                        .message(ErrorType.EXPT002.getMessage(request.getLocale()))
+                        .build())
                 .build();
         return ResponseEntity.internalServerError().body(errorApi);
     }
